--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,47 @@
-decorator==4.0.9
+appnope==0.1.0
+backports-abc==0.4
+backports.ssl-match-hostname==3.5.0.1
+certifi==2015.11.20.1
+cycler==0.10.0
+decorator==4.0.6
 Flask==0.10.1
 Flask-SQLAlchemy==2.1
-ipdb==0.8.2
-ipython==4.1.1
+funcsigs==0.4
+functools32==3.2.3.post2
+gnureadline==6.3.3
+ipdb==0.8.1
+ipython==4.0.3
 ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.5.1
 MarkupSafe==0.23
+matplotlib==1.5.1
+mock==1.3.0
+networkx==1.11
+numpy==1.10.4
+pandas==0.17.1
 path.py==8.1.2
+pbr==1.8.1
 pexpect==4.0.1
 pickleshare==0.6
-ptyprocess==0.5.1
+Pillow==3.1.1
+ptyprocess==0.5
+pylab==0.1.3
+pyparsing==2.1.0
+python-dateutil==2.4.2
+pytz==2015.7
+pyzmq==15.2.0
+scikit-image==0.11.3
+scikit-learn==0.17.1
+scipy==0.17.0
+seaborn==0.7.0
 simplegeneric==0.8.1
-SQLAlchemy==1.0.12
+singledispatch==3.4.0.3
+six==1.10.0
+SQLAlchemy==1.0.11
+sympy==0.7.6.1
+tornado==4.3
 traitlets==4.1.0
-Werkzeug==0.11.4
-wheel==0.29.0
+Werkzeug==0.11.3
+wheel==0.26.0
